# claude-sessions

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  agent-sessions.tmux  agentseq.tmux  claude-sessions.tmux  pyproject.toml
.github/workflows/: test.yml
_imports/dash/: .gitignore  README.md  pyproject.toml
_imports/dash/claude_dash/: config.py  events.py  parser.py  server.py  subscription.py
_imports/dash/web/: index.html  playwright.config.ts  tsconfig.json  vite.config.ts
_imports/dash/web/e2e/: live-index.spec.ts  notion-refresh.spec.ts  range-picker.spec.ts  responsive.spec.ts  shortcuts.spec.ts
_imports/dash/web/src/: App.tsx
_imports/dash/web/src/components/: GlobalSearch.tsx  RangePicker.tsx  Sidebar.tsx  TopBar.tsx  UsageBar.tsx
_imports/dash/web/src/hooks/: useDashboard.ts  useShortcuts.ts  useToast.ts
_imports/dash/web/src/pages/: DashboardPage.tsx
_imports/dash/web/src/styles/: tokens.css
_imports/dash/web/src/styles/components/: search.css  session.css  sidebar.css  toaster.css  topbar.css
_imports/session-menu/: .gitignore  pyproject.toml
_imports/session-menu/claude_session_menu/: __main__.py  menu.py
agent_sessions/cli/: main.py
agent_sessions/core/: _compat.py  config.py  db.py  indexer.py  models.py  sessions.py  transcript.py
agent_sessions/core/launcher/: __init__.py  detect.py  generic.py  tmux.py
agent_sessions/core/sources/: __init__.py  claude.py
agent_sessions/dash/: launcher_extras.py  server.py  subscription.py
agent_sessions/menu/: app.py  processes.py
agentseq/: __init__.py
agentseq/cli/: main.py
agentseq/core/: _compat.py  config.py  db.py  export.py  indexer.py  models.py  parser.py  sessions.py
agentseq/core/launcher/: detect.py  generic.py  zellij.py
agentseq/dash/: launcher_extras.py  models.py  notion.py  server.py  subscription.py
agentseq/menu/: app.py
agentseq/tui/: __init__.py  agentseq.tcss  app.py  live.py  vim.py
agentseq/tui/screens/: agents.py  browser.py  combine.py  detail.py  jobs.py
claude_sessions/cli/: main.py
claude_sessions/core/: __init__.py  indexer.py  sessions.py
claude_sessions/core/launcher/: base.py  generic.py  ghostty.py
claude_sessions/dash/: launcher_extras.py  notion.py
claude_sessions/menu/: app.py  launcher.py
docs/: PLAN.md
docs/screenshots/: _demo-ls.sh  cli.tape
share/tmux/: agent-sessions.tmux  agentseq.tmux  claude-sessions.tmux
share/zellij/: README.md
tests/: test_cli.py  test_compat.py  test_core_no_pydantic.py  test_db.py  test_db_migration.py  test_export.py  test_launcher.py  test_parser.py  test_sessions.py  test_transcript.py  test_tui_combine.py  test_tui_screens.py  test_tui_vim.py
web/: .gitignore  index.html  package-lock.json  package.json
web/e2e/: fixtures.ts  global-search.spec.ts  persistence.spec.ts  resume.spec.ts
web/scripts/: capture-cli.mjs  capture-cli.sh  capture-menu.mjs  capture-menu.sh  capture-screenshot.mjs  seed-demo-db.py
web/src/: api.ts  main.tsx
web/src/components/: GlobalSearch.tsx  IconRow.tsx  NotionTodoGroup.tsx  NotionTodoItem.tsx  ProjectCard.tsx  SessionCard.tsx  Toaster.tsx  TopBar.tsx
web/src/hooks/: useLiveIndex.ts  useSearch.ts  useSubscription.ts  useTodos.ts
web/src/styles/: layout.css
web/src/styles/components/: content.css  icon-row.css  project.css
web/src/utils/: format.ts
