[project]
name = "claude-sessions"
version = "0.3.0"
description = "Browse, resume, and visualize Claude Code sessions from CLI, macOS menubar, and a local web dashboard."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Nathan Mauro" }]
keywords = ["claude", "claude-code", "cli", "menubar", "dashboard", "macos"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
menu = ["rumps>=0.4.0"]
dash = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]
all = [
    "rumps>=0.4.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
claude-sessions = "claude_sessions.cli.main:main"

[project.urls]
Homepage = "https://github.com/nathanmauro/claude-sessions"
Issues = "https://github.com/nathanmauro/claude-sessions/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_sessions"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
