[project]
name = "claude-dash"
version = "0.2.0"
description = "Local web dashboard for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.scripts]
claude-dash-server = "claude_dash.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_dash"]
