[project]
name = "claude-session-menu"
version = "0.1.0"
description = "macOS menu bar app to list Claude Code sessions and open/focus them in Ghostty."
requires-python = ">=3.11"
dependencies = [
    "rumps>=0.4.0",
]

[project.scripts]
csm = "claude_session_menu.cli:main"
csm-menu = "claude_session_menu.menu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_session_menu"]
